# adeeny-server

./: .dockerignore  .gitignore  README.Docker.md  README.md  docker-compose.yml  hello.py  pyproject.toml  requirements.txt
apps/donation_management/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/mosque_management/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/templates/: email.html
apps/transactions/: models.py  serializers.py  services.py  urls.py  views.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/templates/users/: confirmation.html  password_changed.html  password_reset.html
config/: settings.py  urls.py
docker/: Dockerfile  build.sh
staticfiles/: staticfiles.json
utils/: exceptions.py  utils.py
